--- a/public/style.css
+++ b/public/style.css
@@ -106,7 +106,7 @@ footer {
 }
 
 .form-container{
-    min-height: 100vh;
+    min-height: 50vh;
     background-color: var(--light-bg);
     display: flex;
     align-items: center;
@@ -123,11 +123,6 @@ footer {
     width: 500px;  
 }
 
-.form-container form .box{
-    width: 100%;
-    border-radius: 5px;
-    padding:12px 14px;
-    font-size: 18px;
-    color:var(--black);
-    margin:10px 0;
+.form-container form .box {
+    text-align: center;
 }
